--- a/BE/blog-service/src/main/resources/application.yaml
+++ b/BE/blog-service/src/main/resources/application.yaml
@@ -13,6 +13,7 @@ spring:
       ddl-auto: update
     generate-ddl: true
     show-sql: true
+    open-in-view: false
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
