--- a/BE/user-service/pom.xml
+++ b/BE/user-service/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>dev.dl</groupId>
+            <artifactId>dl-grpc-proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
