--- a/FE/react-app/.eslintrc
+++ b/FE/react-app/.eslintrc
@@ -1,5 +1,5 @@
 {
     "extends": ["ts-react-important-stuff", "plugin:prettier/recommended"],
     "parser": "@babel/eslint-parser",
-    "requireConfigFile": false
+    "requireConfigFile": true
 }
