--- a/BE/blog-service/docker-compose.yaml
+++ b/BE/blog-service/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - SERVER_PORT=8080
       - SERVER_GRPC_PORT=7070
+      - SERVER_GRPC_SERVER=static://host.docker.internal:7071
       - GRPC_PORT=6070
       - DB_URL=jdbc:postgresql://host.docker.internal:5432/dev_dl_blog
       - DB_USERNAME=postgres
