--- a/BE/user-service/pom.xml
+++ b/BE/user-service/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>dl-grpc-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
