--- a/BE/user-service/src/main/resources/application.yaml
+++ b/BE/user-service/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     generate-ddl: true
     show-sql: true
     open-in-view: false
