--- a/BE/user-service/src/main/resources/application.yaml
+++ b/BE/user-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ grpc:
     port: ${GRPC_PORT:6071}
 spring:
   application:
-    name: Coz Contact
+    name: Dev DL User
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/dev_dl_user}
     username: ${DB_USERNAME:postgres}
