--- a/FE/header-app/package.json
+++ b/FE/header-app/package.json
@@ -49,6 +49,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
@@ -58,6 +59,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "remixicon": "^2.5.0",
     "single-spa": "^5.9.3",
     "single-spa-react": "^4.3.1"
   },
