--- a/BE/blog-service/src/main/resources/application.yaml
+++ b/BE/blog-service/src/main/resources/application.yaml
@@ -23,3 +23,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  graphql:
+    graphiql:
+      enabled: true
+      path: /graphiql
