--- a/BE/blog-service/pom.xml
+++ b/BE/blog-service/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>dl-grpc-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
