--- a/BE/user-service/src/main/resources/application.yaml
+++ b/BE/user-service/src/main/resources/application.yaml
@@ -22,3 +22,14 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+kafka:
+  server: PLAINTEXT://127.0.0.1:9092,PLAINTEXT://127.0.0.1:9093
+  security:
+    protocol: PLAINTEXT
+  sasl:
+    mechanism: GSSAPI
+  topic-user: user-hub
+  topic-user-reply: user-reply
+  numPartitions: 2
+  replicationFactor: 1
+  group-id: user-service
