--- a/BE/authorization-service/src/main/resources/application.yaml
+++ b/BE/authorization-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ security:
   jwt-expiration: 10
 spring:
   application:
-    name: Dev DL Authenticate
+    name: Dev-DL-Authenticate
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/dev_dl_user}
     username: ${DB_USERNAME:postgres}
