--- a/BE/user-service/src/main/resources/application.yaml
+++ b/BE/user-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ grpc:
     port: ${GRPC_PORT:7081}
 spring:
   application:
-    name: Dev DL User
+    name: Dev-DL-User
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/dev_dl_user}
     username: ${DB_USERNAME:postgres}
