--- a/BE/blog-service/src/main/resources/application.yaml
+++ b/BE/blog-service/src/main/resources/application.yaml
@@ -26,3 +26,7 @@ spring:
     graphiql:
       enabled: true
       path: /graphiql
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
