--- a/BE/user-service/src/main/resources/application.yaml
+++ b/BE/user-service/src/main/resources/application.yaml
@@ -33,3 +33,8 @@ kafka:
   numPartitions: 2
   replicationFactor: 1
   group-id: user-service
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+    enabled: false
